Updated CSS to fix alignment problem in copyright

--- a/css/main.css
+++ b/css/main.css
@@ -233,8 +233,6 @@ p#contact-paragraph {
     background-color:#659dbd;
     padding-top: 25px;
     padding-bottom: 30px;
-    width: 1200px;
-    margin-left: 198px;
     
 }
 
